[package]
name = "sqlx-tracing"
version = "0.2.1"
edition = "2024"
description = "OpenTelemetry-compatible tracing for SQLx database operations in Rust."
license = "MIT"
repository = "https://github.com/sunsided/sqlx-tracing"
documentation = "https://docs.rs/sqlx-tracing"
homepage = "https://github.com/sunsided/sqlx-tracing"
readme = "README.md"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
keywords = ["sqlx", "tracing", "opentelemetry", "database", "observability"]
categories = ["database", "development-tools::debugging", "development-tools::profiling", "asynchronous"]

[features]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]

[dependencies]
futures = { version = "0.3" }
sqlx = { version = "0.8", default-features = false, features = ["derive"] }
tracing = { version = "0.1" }

[dev-dependencies]
anyhow = "1"
opentelemetry = "0.31"
opentelemetry-testing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serial_test = { version = "3.3" }
sqlx = { version = "0.8", features = ["runtime-tokio"] }
testcontainers = "0.26.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
